cluster/kube-system/hubble/hubble-ui-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hubble.holthome.net
    http:
      paths:
      - backend:
          serviceName: hubble-ui
          servicePort: http
        path: /
  tls:
  - hosts:
    - hubble.holthome.net
